--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
 }
 
 .header {
-    background-image: url('Image.png');
+    background-image: url('Math-Image.png');
     background-size: cover;
     background-position: center;
     height: 200px;
